
Please send any bug reports to BenBE@omorphia.de, or use the bug report tracker
at sourceforge (http://sourceforge.net/tracker/?group_id=114997&atid=670231)

Version 1.0.8
  -  Added language files
     * APT sources.list (milian)
     * Boo (Marcus Griep)
     * CIL (Common Intermediate Language, .NET Assembly) (Marcus Griep)
     * COBOL (Benny Baumann)
     * KLoneC (Mickael Auger)
     * KLoneC++ (Mickael Auger)
     * PowerShell (Frode Aarebrot)
     * Xorg configuration (milian)
  -  setup caches for parsing on demand, makes stylesheet generators fast again (milian)
  -  reduce strict errors & notices for language files (milian)
  -  Fixed symbol highlighting with C++ sometimes missing keywords after ; and comments (BenBE)
  -  Improved comment handling with TCL (Lars Hellström, BenBE)
  -  Removed explicit escaping of / in Regular Expressions (BenBE)
  -  Ignoring empty keyword groups when highlighting (milian)
  -  Broken handling with XML comments (BenBE)
  -  Some more memory & speed optimizations all over GeSHi (milian)
     * Reduced memory overhead when highlighting keywords (BenBE)
     * Keyword Linking now uses considerably less strtolower calls (milian)
     * Cache Symbol Search Regexp and make Symbol Highlighting faster (milian)
     * Use more native functions like substr_replace and strcasecmp to speed things up (milian)
     * Use considerably less strlen() calls on various points by caching the results (milian)
     * Properly set comments to be case insensitive where appropriate to increase performance (milian)
  -  Added an optimizer for lists in regular expressions. Using these cached lists results in a speedup of approx. 50%.
     The slightly increased memory consumption (~150KB for PHP language file) is more than worth it! (milian)
  -  Added support for external style information files to override language defaults without modifying language files (BenBE)
  -  Added PARSER_CONTROL for OOLANG method highlighting (SF#1923060, BenBE)